--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -145,5 +145,141 @@
     "faqs": "שאלות נפוצות",
     "aboutLink": "אודות",
     "copyright": "כל הזכויות שמורות - חיליק רוזנברג | סיורים בבני ברק"
+  },
+  "bio": {
+    "title": "נעים להכיר, אני חיליק.",
+    "text": "נולדתי ואני חי את כל חיי בעיר האהובה עליי, בני ברק. למשפחה ליטאית שורשית, למדתי בישיבת פונוביז'. אני אוהב את החרדיות ונהנה לארח אתכם בה – כמובן עם כל האוכל היהודי משמח הלבבות.",
+    "cta": "בואו נגלה ביחד"
+  },
+  "journey": {
+    "title": "מה נחווה בדרך?",
+    "subtitle": "תשע תחנות מרתקות מהלב החרדי של בני ברק",
+    "stations": {
+      "streams": {
+        "title": "הזרמים החרדיים",
+        "desc": "נכיר את ההבדלים בין חסידים לליטאים והמבנה החברתי המרתק."
+      },
+      "shidduch": {
+        "title": "עולם השידוכים",
+        "desc": "איך בונים בית יהודי? מהפגישה בלובי המלון ועד לחתונה."
+      },
+      "architecture": {
+        "title": "בנייה יצירתית",
+        "desc": "המרפסות המעופפות והפתרונות האדריכליים לצפיפות הבני ברקית."
+      },
+      "books": {
+        "title": "חנויות ספרים",
+        "desc": "ביקור במוסדות הספר היהודי שבהם המילה הכתובה היא המלכה."
+      },
+      "charity": {
+        "title": "גמ\"חים וחסד",
+        "desc": "הצצה לעולם המדהים של השאלת מוצצים ועד קופות הצדקה."
+      },
+      "yeshiva": {
+        "title": "ישיבות וחיידרים",
+        "desc": "נחווה מקרוב מה באמת עושים כל היום בישיבה ואיך גדל ילד חרדי."
+      },
+      "bakery": {
+        "title": "מאפיית ויז'ניץ",
+        "desc": "ניכנס ללב המאפייה המיתולוגית ונראה איך קולעים חלות."
+      },
+      "volunteering": {
+        "title": "התנדבות ותרומה",
+        "desc": "נכיר את הארגונים שמניעים את החברה החרדית - חסד כדרך חיים."
+      },
+      "internet": {
+        "title": "חדרי האינטרנט",
+        "desc": "איך טכנולוגיה פוגשת מסורת ואיך גולשים בבני ברק?"
+      }
+    }
+  },
+  "menu": {
+    "title": "מה נאכל?",
+    "subtitle": "חגיגה קולינרית של טעמים יהודיים אותנטיים",
+    "items": {
+      "cholent": {
+        "title": "הטשולנט שלי",
+        "desc": "חמין עשיר בבישול ארוך עם בשר נימוח, קישקע וטעמים של בית."
+      },
+      "fish": {
+        "title": "חגיגת דגים וסביצ'ה",
+        "desc": "פלטת דגים יוקרתית: סביצ'ה סלמון טרי, סביצ'ה טונה אדומה והערינג משובח."
+      },
+      "kugel": {
+        "title": "קוגל ירושלמי",
+        "desc": "הקוגל הירושלמי האותנטי - שחום, חריף ומתובל בפלפל שחור גרוס."
+      },
+      "liver": {
+        "title": "כבד קצוץ מסורתי",
+        "desc": "כבד קצוץ במרקם קטיפתי עם ריבת בצל ושפע של אהבה יהודית."
+      },
+      "challenge": {
+        "title": "דו-קרב המאפיות",
+        "desc": "מבחן טעימות עיוור בין ענקיות החלה: מאפיית הצבי מול ויז'ניץ. מי תנצח?"
+      },
+      "blintzes": {
+        "title": "בלינצ'ס אגדיים",
+        "desc": "קינוח חם ומתוק של בלינצ'ס גבינה עשירים שסוגרים את הפינה."
+      }
+    }
+  },
+  "media": {
+    "title": "ראו אותי בתקשורת",
+    "mako": "מאקו",
+    "kan": "כאן 11",
+    "reshet": "רשת 13",
+    "readArticle": "לקריאת הכתבה",
+    "watchEpisode": "לצפייה בפרק",
+    "watchSeries": "לצפייה בסדרה"
+  },
+  "bookingSection": {
+    "title": "מתי יש סיור?",
+    "subtitle": "הסיורים מתקיימים בכל יום חמישי בערב",
+    "selectDate": "בחרו תאריך",
+    "nextThursday": "חמישי הקרוב",
+    "soldOut": "אזל המקום",
+    "blocked": "חסום",
+    "available": "זמין",
+    "registerNow": "לחצו להרשמה עכשיו",
+    "privateTour": "מעוניינים בסיור פרטי?",
+    "contactUs": "צרו קשר",
+    "thursdaysOnly": "הסיורים מתקיימים רק בימי חמישי"
+  },
+  "ratings": {
+    "stars": "דירוג 5.0/5 מבוסס על 28 ביקורות מאומתות",
+    "reason1": {
+      "title": "מבט של בן-בית",
+      "desc": "הסיור שלי מבוסס על היכרות עמוקה עם הסמטאות שבהן גדלתי. זו לא הדרכה חיצונית, אלא הצצה נדירה לחיים החרדיים שלי."
+    },
+    "reason2": {
+      "title": "טעימות בלעדיות",
+      "desc": "נבקר רק במקומות הטובים ביותר של האוכל היהודי, מקומות שעוברים בבני ברק מפה לאוזן. ששש... תשמרו גם אתם את הסוד."
+    },
+    "reason3": {
+      "title": "גשר בין עולמות",
+      "desc": "סיור מלא הומור ושיח פתוח. כאן כל שאלה מתקבלת בחיוך."
+    }
+  },
+  "faqs": {
+    "q1": {
+      "question": "האם ניתן לתאם סיור פרטי?",
+      "answer": "בוודאי! אני מציע סיורים מותאמים אישית לקבוצות של 10 משתתפים ומעלה בכל ימות השבוע בתיאום מראש."
+    },
+    "q2": {
+      "question": "מה עושים בבני ברק בחמישי בערב?",
+      "answer": "חמישי בערב בבני ברק הוא 'ליל שישי' - זמן הקסם שבו העיר מתעוררת לחיים עם הכנות לשבת."
+    },
+    "q3": {
+      "question": "כמה זמן נמשך הסיור ואיפה נפגשים?",
+      "answer": "הסיור נמשך בין שעתיים וחצי לשלוש שעות. פרטי המפגש המדויקים יישלחו אליכם לאחר סגירת ההרשמה."
+    },
+    "q4": {
+      "question": "איך מתלבשים לסיור?",
+      "answer": "חשוב להגיע בלבוש מכבד וצנוע כדי שנוכל להיכנס למקומות הכי סודיים."
+    },
+    "q5": {
+      "question": "איפה קונים אוכל מוכן לשבת?",
+      "answer": "במהלך הסיור נבקר במקומות הטובים ביותר לקניית אוכל מוכן ותקבלו ממני המלצות חמות."
+    }
   }
 }
