--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -281,5 +281,130 @@
       "question": "איפה קונים אוכל מוכן לשבת?",
       "answer": "במהלך הסיור נבקר במקומות הטובים ביותר לקניית אוכל מוכן ותקבלו ממני המלצות חמות."
     }
+  },
+  "helpHub": {
+    "questions": "שאלות?",
+    "register": "להרשמה"
+  },
+  "confirmation": {
+    "title": "ההזמנה נשלחה בהצלחה!",
+    "thankYou": "תודה רבה",
+    "bookingReference": "מספר הזמנה",
+    "saveForReference": "שמור מספר זה לצורך בירורים",
+    "bookingDetails": "פרטי ההזמנה",
+    "tourDate": "תאריך הסיור",
+    "participants": "מספר משתתפים",
+    "participant": "משתתף",
+    "participantsPlural": "משתתפים",
+    "email": "אימייל",
+    "phone": "טלפון",
+    "totalPayment": "סה\"כ לתשלום",
+    "perPerson": "לאדם",
+    "notes": "הערות",
+    "nextSteps": {
+      "title": "מה הלאה?",
+      "emailSent": "אישור ההזמנה נשלח לכתובת המייל שלך",
+      "contactSoon": "נציג יצור איתך קשר בהקדם לאישור סופי ותשלום",
+      "bookingNumber": "מספר ההזמנה שלך"
+    },
+    "contact": {
+      "title": "שאלות? צור קשר",
+      "whatsapp": "שלח הודעת WhatsApp"
+    },
+    "backToHome": "חזרה לדף הראשי"
+  },
+  "terms": {
+    "title": "תנאי שימוש ותקנון",
+    "subtitle": "נא לקרוא בעיון לפני ביצוע הזמנה",
+    "section1": {
+      "title": "כללי",
+      "tours": "הסיורים מתקיימים בימי חמישי בערב",
+      "duration": "משך הסיור: בין 2.5 ל-3 שעות",
+      "includes": "המחיר כולל את כל האוכל, משקאות, אלכוהול ופינוקים"
+    },
+    "section2": {
+      "title": "תשלום",
+      "prepayment": "התשלום מבוצע מראש",
+      "price": "המחיר",
+      "priceAmount": "250 ש\"ח",
+      "perPerson": "לאדם",
+      "selectMethod": "בחר אמצעי תשלום:",
+      "bit": "Bit",
+      "credit": "כרטיס אשראי",
+      "bank": "העברה בנקאית",
+      "clickForDetails": "לחץ לפרטי תשלום"
+    },
+    "section3": {
+      "title": "מדיניות ביטולים",
+      "option1": {
+        "title": "ביטול עד 7 ימים לפני מועד הסיור",
+        "desc": "ללא עלות - החזר מלא של התשלום"
+      },
+      "option2": {
+        "title": "ביטול בין 7 ימים לבין 48 שעות לפני הסיור",
+        "desc": "החזר של 50% מסכום התשלום"
+      },
+      "option3": {
+        "title": "ביטול פחות מ-48 שעות לפני הסיור",
+        "desc": "ללא החזר כספי"
+      },
+      "postpone": {
+        "title": "אפשרות דחייה",
+        "desc": "בכל מקרה של ביטול, ניתן לדחות את הסיור למועד אחר ללא עלות נוספת (בכפוף לזמינות)"
+      }
+    },
+    "section4": {
+      "title": "מתאים לכל הגילאים",
+      "allAges": "הסיור מתאים לכל גיל!",
+      "babies": "אמהות מוזמנות להגיע גם עם תינוקות",
+      "families": "משפחות עם ילדים - מוזמנים בברכה!"
+    },
+    "section5": {
+      "title": "אחריות",
+      "responsibility": "המשתתפים אחראים על עצמם במהלך הסיור",
+      "valuables": "מארגן הסיור אינו אחראי לחפצי ערך או לנזקים אישיים"
+    },
+    "section6": {
+      "title": "פרטיות ואבטחת מידע",
+      "secure": "הפרטים האישיים נשמרים במאובטח ולא יועברו לצדדים שלישיים",
+      "purpose": "השימוש בפרטים הוא לצורך ניהול ההזמנה בלבד",
+      "storage": "המידע מאוחסן בשרתי Firebase המאובטחים"
+    },
+    "section7": {
+      "title": "יצירת קשר",
+      "questions": "לשאלות בנוגע לתנאי השימוש:",
+      "name": "חיליק רוזנברג",
+      "whatsapp": "שלח הודעת WhatsApp"
+    },
+    "lastUpdated": "עדכון אחרון: ינואר 2026",
+    "backToBooking": "חזרה לטופס הרשמה",
+    "backToTop": "חזרה למעלה",
+    "paymentModal": {
+      "bit": {
+        "title": "תשלום ב-Bit",
+        "line1": "העבר 250 ₪ (לכל משתתף) לטלפון:",
+        "phone": "050-580-4367",
+        "name": "שם: חיליק רוזנברג",
+        "line4": "לאחר התשלום, שלח צילום מסך של האישור בוואטסאפ"
+      },
+      "credit": {
+        "title": "תשלום בכרטיס אשראי",
+        "line1": "לתשלום בכרטיס אשראי, אנא צור קשר:",
+        "phone": "טלפון: 050-580-4367",
+        "whatsapp": "WhatsApp: 050-580-4367",
+        "line4": "נשלח לך קישור תשלום מאובטח"
+      },
+      "bank": {
+        "title": "העברה בנקאית",
+        "details": "פרטי חשבון הבנק:",
+        "bankName": "בנק: [שם הבנק]",
+        "accountNumber": "מספר חשבון: [מספר חשבון]",
+        "branchNumber": "מספר סניף: [מספר סניף]",
+        "beneficiary": "שם המוטב: חיליק רוזנברג",
+        "confirmation": "לאחר ההעברה, שלח אישור בוואטסאפ: 050-580-4367"
+      },
+      "openWhatsapp": "פתח שיחה בוואטסאפ",
+      "close": "סגור"
+    }
   }
 }
